fix footer on small screen

--- a/css/styles.css
+++ b/css/styles.css
@@ -364,6 +364,7 @@ body {
   .inside #footer {
     position: relative;
     width: 100%;
+    padding: 0;
   }
 
 }
